--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
     <link rel="stylesheet" href="assets/style.css">
 
 </head>
+
 <body>
-    
+    <div class="box">
+
+    </div>
+
+    <div class="box">
+
+    </div>
+
+    <div class="box">
+
+    </div>
+
+    <div class="box">
+
+    </div>
+
+    <div class="box">
+
+    </div>
+
+    <div class="box">
+
+    </div>
+
 </body>
+
 </html>
