--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
+    <header>
+        <h1>CSS Snippet Cheatsheat</h1>
+        <p>Ever have trouble recalling the exact syntax for your favorite CSS code? Give it a permanent home and add it to this page! 
+            Select any snippet below and it'll automatically select all of the code for you to copy.</p>
+    </header>
     
 </body>
 </html>
