Added section flex container for boxes.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <p>Ever have trouble recalling the exact syntax for your favorite CSS code? Give it a permanent home and add it to this page! 
             Select any snippet below and it'll automatically select all of the code for you to copy.</p>
     </header>
-    
-    <div class="box">
-
-    </div>
+    <section class="content">
 
     <div class="box">
 
@@ -41,6 +38,11 @@
 
     </div>
 
+    <div class="box">
+
+    </div>
+
+    </section>
 </body>
 
 </html>
