--- a/index.html
+++ b/index.html
@@ -16,31 +16,43 @@
         <p>Ever have trouble recalling the exact syntax for your favorite CSS code? Give it a permanent home and add it to this page! 
             Select any snippet below and it'll automatically select all of the code for you to copy.</p>
     </header>
-    
+    <section class="content">
     <div class="box">
+        <div class="inside_text">
 
+        </div>
     </div>
 
     <div class="box">
+        <div class="inside_text">
 
+        </div>
     </div>
 
     <div class="box">
+        <div class="inside_text">
 
+        </div>
     </div>
 
     <div class="box">
+            <div class="inside_text">
 
+            </div>
     </div>
 
     <div class="box">
+        <div class="inside_text">
 
+        </div>
     </div>
 
     <div class="box">
+        <div class="inside_text">
 
+        </div>
     </div>
-
+</section>
 </body>
 
 </html>
